--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* bg-gradient-to-br from-rose-50 via-pink-50 to-amber */
 }
 
 .great-vibes-title {
