feat: Introduce animated header component, global styles, Open Graph metadata, and a new image asset.

--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,9 @@
   position: relative;
   z-index: 1;
 }
+
+.pinyon-script-regular {
+  font-family: "Pinyon Script", cursive;
+  font-weight: bold;
+  /* font-style:; */
+}
